Fixed the spacing for the ASCII art

--- a/src/components/ASCII.css
+++ b/src/components/ASCII.css
@@ -1,7 +1,22 @@
 .container {
+  height: 10%;
   display: flex;
   flex-direction: column;
   align-items: center;
   font-size: 2vmin;
   color: red;
+}
+
+.ascii {
+  padding-bottom: 0.2rem;
+  font-family: 'Courier';
+  font-size: 1rem;
+  width: 65.3333333333%;
+  float: left;
+  box-sizing: border-box;
+}
+
+
+.eight.columns {
+  width: 65.3333333333%;
 }
